Fixed z-index and css

--- a/MaraudersMIT/client/templates/maraudersMap.css
+++ b/MaraudersMIT/client/templates/maraudersMap.css
@@ -75,6 +75,7 @@
 	display: none;
 }
 .pin.active .large {
+	z-index: 999;
 	display: block;
 }
 
