--- a/MaraudersMIT/client/templates/sideBar.css
+++ b/MaraudersMIT/client/templates/sideBar.css
@@ -13,7 +13,7 @@ ul, ol {
     height:100%;
     overflow: hidden;
     background: #DE9967;
-    color: #430300;
+/*    color: #430300;*/
 }
 #searchbox{
     padding-top: 20px;
@@ -77,7 +77,6 @@ ul, ol {
 
 .scrollable{
     padding-top: 20px;
-    border: 1px solid;
     height: auto;
     max-height: 100%;
     overflow-x: hidden;
